--- a/dyngraph.html
+++ b/dyngraph.html
@@ -12,12 +12,10 @@
 	  const canv_name = "c";
 	  function config() {
 	      check_tracer();
-	      sel_fillcol.dispatchEvent(new Event("change"));
-	      sel_outlicol.dispatchEvent(new Event("change"));
-	      sel_linecol.dispatchEvent(new Event("change"));
-	      sel_tracefill.dispatchEvent(new Event("change"));
-	      sel_traceoutl.dispatchEvent(new Event("change"));
-	      sel_traceline.dispatchEvent(new Event("change"));
+	      // document.getElementById("sel_graphalgs").value = '0'; // does not help when tabs are restored
+	      for (let it in col_sels)
+	       	  col_sels[it].value = colours[it];
+	      inp_alpha.dispatchEvent(new Event("change"));
 	  }
 	  function remove_unconnected() {
 	      const edge_list = get_edge_list();
@@ -47,6 +45,7 @@
 	  function proc_sel_graphalg(sel_id) {
 	      const selg = document.getElementById(sel_id);
 	      const seli = selg.selectedIndex;
+	      console.log("alg selected: " + seli);
 	      switch (seli) {
 	      case 0:
 	      case 1:
@@ -161,6 +160,10 @@
 	      <td><input id="nu_scatter" type="number" value="80" min="1" max="100" onchange="update_scatter('nu_scatter')"></input><label>%</label></td>
 	    </tr>
 	    <tr>
+	      <td><label>alpha</label></td>
+	      <td><input id="nu_alpha" type="number" value="90" min="10" max="100"></input><label>%</label></td>
+	    </tr>
+	    <tr>
 	      <td colspan="2">
 		<table id="tbl_col_select">
 		  <tr>
@@ -171,37 +174,37 @@
 		  </tr>
 		  <tr>
 		    <td><label>fill</label></td>
-		    <td class="centred"><input id="fill_col" type="color" value="#48929B"></input></td> <!-- 浅葱色「あさぎいろ」 -->
+		    <td class="centred"><input id="fill_col" type="color"></input></td>
 		    <td class="centred"><input id="cb_randfillcol" class="cb" type="checkbox" onchange="col_sel_change('cb_randfillcol','fill_col','rnd_fil_col')"></input></td>
 		    <td class="centred"><input id="cb_fillcoloff" class="cb" type="checkbox" onchange="col_off_change('cb_fillcoloff','cb_randfillcol','fill_col','fill')"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>outline</label></td>
-		    <td class="centred"><input id="outli_col" type="color" value="#48929B"></input></td> <!-- 浅葱色「あさぎいろ」 -->
+		    <td class="centred"><input id="outli_col" type="color"></input></td>
 		    <td class="centred"><input id="cb_randoutlicol" class="cb" type="checkbox" onchange="col_sel_change('cb_randoutlicol','outli_col','rnd_oli_col')"></input></td>
 		    <td class="centred"><input id="cb_outlicoloff" class="cb" type="checkbox" onchange="col_off_change('cb_outlicoloff','cb_randoutlicol','outli_col','outl')"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>line</label></td>
-		    <td class="centred"><input id="line_col" type="color" value="#86ABA5"></input></td> <!-- 水色「みずいろ」 -->
+		    <td class="centred"><input id="line_col" type="color"></input></td>
 		    <td class="centred"><input id="cb_randlinecol" class="cb" type="checkbox" onchange="col_sel_change('cb_randlinecol','line_col','rnd_lin_col')"></input></td>
 		    <td class="centred"><input id="cb_linecoloff" class="cb" type="checkbox" onchange="col_off_change('cb_linecoloff','cb_randlinecol','line_col','line')"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace fill</label></td>
-		    <td class="centred"><input id="trace_fill" type="color" value="#2B3736"></input></td> <!-- 鉄御納戸「てつおなんど」 -->
+		    <td class="centred"><input id="trace_fill" type="color"></input></td>
 		    <td class="centred"><input id="cb_randtracecol" class="cb" type="checkbox" onchange="col_sel_change('cb_randtracecol','trace_fill','rnd_trc_fil')"></input></td>
 		    <td class="centred"><input id="cb_tracecoloff" class="cb" type="checkbox" onchange="col_off_change('cb_tracecoloff','cb_randtracecol','trace_fill','tfil')" disabled></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace outline</label></td>
-		    <td class="centred"><input id="trace_outline" type="color" value="#2B3736"></input></td> <!-- 鉄御納戸「てつおなんど」 -->
+		    <td class="centred"><input id="trace_outline" type="color"></input></td>
 		    <td class="centred"><input id="cb_randtraceoutl" class="cb" type="checkbox" onchange="col_sel_change('cb_randtraceoutl','trace_outline','rnd_trc_oli')"></input></td>
 		    <td class="centred"><input id="cb_traceoutloff" class="cb" type="checkbox" onchange="col_off_change('cb_traceoutloff','cb_randtraceoutl','trace_outline','toli')" disabled></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace line</label></td>
-		    <td class="centred"><input id="trace_line" type="color" value="#344D56"></input></td> <!-- 熨斗目花色「のしめはないろ」 -->
+		    <td class="centred"><input id="trace_line" type="color"></input></td>
 		    <td class="centred"><input id="cb_randtraceline" class="cb" type="checkbox" onchange="col_sel_change('cb_randtraceline','trace_line','rnd_trc_lin')"></input></td>
 		    <td class="centred"><input id="cb_tracefilloff" class="cb" type="checkbox" onchange="col_off_change('cb_tracefilloff','cb_randtraceline','trace_line','tlin')" disabled></input></td>
 		  </tr>
@@ -213,8 +216,8 @@
 	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></input></td>
 	    </tr>
 	    <tr>
-	      <td><input type="button" class="button2" id="btn_print" onClick="print_edges(area_edgelist);" value="Print" /></td>
-	      <td><input type="button" class="button2" id="btn_clear" onClick="clear_canvas();" value="Clear" /></td>
+	      <td><input type="button" class="button1" id="btn_print" onClick="print_edges(area_edgelist);" value="Print" /></td>
+	      <td><input type="button" class="button1" id="btn_clear" onClick="clear_canvas();" value="Clear" /></td>
 	    </tr>
 	    <tr>
 	      <td><input type="button" class="button1" id="btn_pause" onClick="pause();" value="Pause" /></td>
@@ -251,6 +254,8 @@
 	const inp_nodes = document.getElementById("nu_nodes");
 	const inp_edges = document.getElementById("nu_edges");
 	const inp_branches = document.getElementById("nu_branches");
+	const inp_alpha = document.getElementById("nu_alpha");
+	inp_alpha.addEventListener("change",function(){update_alpha(inp_alpha.value)});
 	const btn_start = document.getElementById("btn_start");
 	const btn_stop = document.getElementById("btn_stop");
 	const btn_pause = document.getElementById("btn_pause");
@@ -258,23 +263,21 @@
 	const btn_print = document.getElementById("btn_print");
 	const btn_clear = document.getElementById("btn_clear");
 	const btn_rm_lone = document.getElementById("btn_rm_lone");
-	const sel_fillcol = document.getElementById("fill_col");
-	sel_fillcol.addEventListener("change",function() { colours["fill_colour"] = sel_fillcol.value; });
-	const sel_linecol = document.getElementById("line_col");
-	sel_linecol.addEventListener("change",function() { colours["line_colour"] = sel_linecol.value; });
-	const sel_outlicol = document.getElementById("outli_col");
-	sel_outlicol.addEventListener("change",function() { colours["outline_col"] = sel_outlicol.value; });
-	const sel_tracefill = document.getElementById("trace_fill");
-	sel_tracefill.addEventListener("change",function() { colours["trc_fil_col"] = sel_tracefill.value; });
-	const sel_traceoutl = document.getElementById("trace_outline");
-	sel_traceoutl.addEventListener("change",function() { colours["trc_oli_col"] = sel_traceoutl.value; });
-	const sel_traceline = document.getElementById("trace_line");
-	sel_traceline.addEventListener("change",function() { colours["trc_lin_col"] = sel_traceline.value; });
+	const col_sels = {
+	    fill_colour: document.getElementById("fill_col"),
+	    outline_col: document.getElementById("outli_col"),
+	    line_colour: document.getElementById("line_col"),
+	    trc_fil_col: document.getElementById("trace_fill"),
+	    trc_oli_col: document.getElementById("trace_outline"),
+	    trc_lin_col: document.getElementById("trace_line")
+	};
+	for (let it in col_sels)
+	    col_sels[it].addEventListener("change",function(){colours[it] = col_sels[it].value;});
 	const area_edgelist = document.getElementById("edge_list");
 	area_edgelist.placeholder = "n1 n2\nn2 n3\nn3 n1";
 	document.addEventListener('keydown', (event) => {
 	    const keyName = event.key;
-	    console.log(keyName);
+	    //console.log(keyName);
 	    if (event.ctrlKey && keyName == 'Enter')
 		btn_start.dispatchEvent(new Event("click"));
 	    if (keyName == 'Pause') {
