--- a/dyngraph.html
+++ b/dyngraph.html
@@ -78,28 +78,16 @@
 	      vertical-align: middle;
 	  }
 	  input.cb {
-	      width: 2vw;
-	      height: 2vh;
+	      width: 1.8vw;
+	      height: 1.8vh;
 	  }
 	  input.rb {
-	      width: 2.5vw;
-	      height: 2.5vh;
+	      width: 2.25vw;
+	      height: 2.25vh;
 	  }
-	  .float-container {
-	      border: 3px solid #fff;
-	      padding: 0px;
-	  }
-	  .float-canvas-child {
-	      width: 55%;
+	  .column {
 	      float: left;
-	      padding: 0px;
-	      /* border: 2px solid red; */
-	  }
-	  .float-control-child {
-	      width: 35%;
-	      float: right;
-	      padding: 2vw;
-	      /* border: 2px solid red; */
+	      padding: 1vw;
 	  }
 	  .centred {
 	      margin-left: auto;
@@ -135,9 +123,8 @@
     </head>
 
     <body onload="config();start();">
-      <!-- <div class="float-container"> -->
-        <div class="float-canvas-child" id="canvas_space"><canvas id="c" width="1000" height="1000"></canvas></div>
-        <div class="float-control-child" id="panel_space">
+      <div id="main_container">
+        <div class="column" id="panel_space">
 	  <table>
 	    <tr>
 	      <td><label>nodes</label></td>
@@ -245,7 +232,8 @@
 	    </tr>
 	  </table>
 	</div>
-      <!-- </div> -->
+	<div class="column" id="canvas_space"><canvas id="c" width="1000" height="1000"></canvas></div>
+      </div>
       <script type="text/javascript">
 	const tracer = document.getElementById("cb_tracing");
 	tracer.addEventListener("change",function() { check_tracer(); });
