--- a/dyngraph.html
+++ b/dyngraph.html
@@ -94,6 +94,11 @@
 	      margin-right: auto;
 	      text-align: center;
 	  }
+	  .right {
+	      margin-left: auto;
+	      margin-right: auto;
+	      text-align: right;
+	  }
 	  .button1 {
 	      width: 11rem;
 	  }
@@ -118,6 +123,33 @@
 	  td {
 	      /* text-align: center; */
 	      vertical-align: middle;
+	  }
+	  .slider {
+	      -webkit-appearance: none;
+	      width: 100%;
+	      height: 1px;
+	      border-radius: 5px;
+	      background: #171412;
+	      outline: none;
+	      opacity: 0.7;
+	      -webkit-transition: .2s;
+	      transition: opacity .2s;
+	  }
+	  .slider::-webkit-slider-thumb {
+	      -webkit-appearance: none;
+	      appearance: none;
+	      width: 20px;
+	      height: 20px;
+	      border-radius: 50%; 
+	      background: #2A603B;
+	      cursor: pointer;
+	  }
+	  .slider::-moz-range-thumb {
+	      width: 18px;
+	      height: 18px;
+	      border-radius: 50%;
+	      background: #2A603B;
+	      cursor: pointer;
 	  }
 	</style>
     </head>
@@ -215,6 +247,43 @@
 	      <td><input type="button" class="button1" id="btn_start" onClick="start(canv_name,Number(inp_nodes.value),Number(inp_edges.value),Number(inp_branches.value));" value="Restart" /></td>
 	      <td><input type="button" class="button1" id="btn_stop" onClick="stop();" value="Stop" /></td>
 	    </tr>
+	    <tr><td colspan="2" class="centred"><label>Physics Parameters</label></td></tr>
+	    <tr>
+	      <td colspan="2">
+		<table>
+		  <tr>
+		    <td>Max Link Length</td>
+		    <td><input type="range" min="0" max="200" value="30" step="10" class="slider" id="slider_link_max_length")></td>
+		    <td class="right"><span id="span_link_max_length">30</span></td>
+		  </tr>
+		  <tr>
+		    <td>Min Link Length</td>
+		    <td><input type="range" min="0" max="200" value="20" step="10" class="slider" id="slider_link_min_length")></td>
+		    <td class="right"><span id="span_link_min_length">20</span></td>
+		  </tr>
+		  <tr>
+		    <td>Distance Modifier</td>
+		    <td><input type="range" min="0" max="600" value="10" step="10" class="slider" id="slider_dist_modifier")></td>
+		    <td class="right"><span id="span_dist_modifier">20</span></td>
+		  </tr>
+		  <tr>
+		    <td>Large Distance Divisor</td>
+		    <td><input type="range" min="0" max="200" value="40" step="10" class="slider" id="slider_large_dist_div")></td>
+		    <td class="right"><span id="span_large_dist_div">40</span></td>
+		  </tr>
+		  <tr>
+		    <td>Small Distance Divisor</td>
+		    <td><input type="range" min="0" max="200" value="30" step="10" class="slider" id="slider_small_dist_div")></td>
+		    <td class="right"><span id="span_small_dist_div">30</span></td>
+		  </tr>
+		  <tr>
+		    <td>Distance Threshold</td>
+		    <td><input type="range" min="0" max="200" value="100" step="10" class="slider" id="slider_dist_threshold")></td>
+		    <td class="right"><span id="span_dist_threshold">100</span></td>
+		  </tr>
+		</table>
+	      </td>
+	    </tr>
 	    <tr><td colspan="2" class="centred"><label>How to build graph?</label></td></tr>
 	    <tr>
 	      <td colspan="2"><select class="button2" id="sel_graphalgs" onchange="proc_sel_graphalg('sel_graphalgs')">
@@ -259,6 +328,22 @@
 	    trc_oli_col: document.getElementById("trace_outline"),
 	    trc_lin_col: document.getElementById("trace_line")
 	};
+	const map_node_params = {
+	    link_max_length: [],
+	    link_min_length: [],
+	    dist_modifier:   [],
+	    large_dist_div:  [],
+	    small_dist_div:  [],
+	    dist_threshold:  [],
+	};
+	for (let it in map_node_params) {
+	    map_node_params[it].push(document.getElementById("slider_"+it));
+	    map_node_params[it].push(document.getElementById("span_"+it));
+	    map_node_params[it][0].oninput = function() {
+		modify_params(it,Number(this.value));
+		map_node_params[it][1].innerHTML = this.value;
+	    }
+	}
 	function pause_or_continue() {
 	    if (!btn_pause.disabled)
 		btn_pause.dispatchEvent(new Event("click"));
