--- a/dyngraph.html
+++ b/dyngraph.html
@@ -178,10 +178,10 @@
 	      <td><label>edges</label></td>
 	      <td><input id="nu_edges" type="number" value="100" min="1" max="1000"></input></td>
 	    </tr>
-	    <!-- <tr> -->
-	    <!--   <td><label>edge width</label></td> -->
-	    <!--   <td><input id="nu_edges" type="number" value="100" min="1" max="1000"></input></td> -->
-	    <!-- </tr> -->
+	    <tr>
+	      <td><label>line width</label></td>
+	      <td><input id="wd_line" type="number" value="1" min="0" max="32"></input></td>
+	    </tr>
 	    <tr>
 	      <td><label>branches</label></td>
 	      <td><input id="nu_branches" type="number" value="2" min="1" max="10" disabled></input></td>
@@ -323,6 +323,8 @@
 	cv_size.addEventListener("change",function() {resize_canvas(canv,this.value);});
 	const nd_size = document.getElementById("sz_nodes");
 	nd_size.addEventListener("change",function() {node_size = Number(nd_size.value)});
+	const ln_width = document.getElementById("wd_line");
+	ln_width.addEventListener("change",function() {resize_linewidth(Number(this.value));});
 	const inp_nodes = document.getElementById("nu_nodes");
 	const inp_edges = document.getElementById("nu_edges");
 	const inp_branches = document.getElementById("nu_branches");
