--- a/dyngraph.html
+++ b/dyngraph.html
@@ -171,7 +171,7 @@
 	      <td><input id="nu_nodes" type="number" value="100" min="2" max="1000"></input></td>
 	    </tr>
 	    <tr>
-	      <td><label>node size</label></td>
+	      <td><label>node radius</label></td>
 	      <td><input id="sz_nodes" type="number" value="5" min="0" max="100"></input></td>
 	    </tr>
 	    <tr>
