correction of canvas click action

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -313,7 +313,7 @@
 	    </tr>
 	  </table>
 	</div>
-	<div class="column" id="canvas_space"><canvas id="cv_canv" width="1000" height="1000" onclick="pause_or_continue()" ondblclick="clear_canvas()"></canvas></div>
+	<div class="column" id="canvas_space"><canvas id="cv_canv" width="1000" height="1000" onclick="pause_or_continue(btn_pause_conti)" ondblclick="clear_canvas()"></canvas></div>
       </div>
       <script type="text/javascript">
 	const canv = document.getElementById("cv_canv");
