--- a/dyngraph.html
+++ b/dyngraph.html
@@ -161,7 +161,7 @@
 	  }
 	</style>
     </head>
-    <body onload="config();start(c2d);">
+    <body onload="config();restart();">
       <div id="main_container">
         <div class="column" id="panel_space">
 	  <table>
@@ -255,8 +255,7 @@
 	    </tr>
 	    <tr>
 	      <td><input type="button" class="button1" id="btn_pause_conti" value="Pause" /></td>
-	      <td><input type="button" class="button1" id="btn_start" onClick="start(c2d,Number(inp_vals_map.nu_nodes.value,inp_vals_map.nu_alpha.value),Number(inp_vals_map.nu_edges.value),Number(inp_vals_map.nu_branches.value));" value="Restart" /></td>
-	      <!-- <td><input type="button" class="button1" id="btn_cont" onClick="go_on();" value="Continue" disabled></td> -->
+	      <td><input type="button" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td>
 	    </tr>
 	    <tr>
 	      <td colspan="2"><input type="file" id="infilename" /></td>
@@ -375,6 +374,15 @@
 		modify_params(it,Number(this.value));
 		map_node_params[it][1].innerHTML = this.value;
 	    }
+	}
+	function restart() {
+	    start(c2d,
+		  Number(inp_vals_map.nu_nodes.value),
+		  Number(inp_vals_map.nu_edges.value),
+		  Number(inp_vals_map.nu_branches.value),
+		  Number(inp_vals_map.sz_radius.value),
+		  Number(inp_vals_map.nu_alpha.value)
+		 );
 	}
 	function load_cols(cols) {
 	    for(a_col in cols) {
