--- a/dyngraph.html
+++ b/dyngraph.html
@@ -209,45 +209,46 @@
 		  <tr>
 		    <td><label>fill</label></td>
 		    <td class="centred"><input id="fill_colour" type="color"></input></td>
-		    <td class="centred"><input id="cb_randfillcol" class="cb" type="checkbox" onchange="col_sel_change('cb_randfillcol','fill_colour','rnd_fil_col')"></input></td>
-		    <td class="centred"><input id="cb_fillcoloff" class="cb" type="checkbox" onchange="col_off_change('cb_fillcoloff','cb_randfillcol','fill_colour','fill')"></input></td>
+		    <td class="centred"><input id="rnd_fill_colour" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="fill_colour_off" class="cb" type="checkbox"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>outline</label></td>
 		    <td class="centred"><input id="outline_col" type="color"></input></td>
-		    <td class="centred"><input id="cb_randoutlicol" class="cb" type="checkbox" onchange="col_sel_change('cb_randoutlicol','outline_col','rnd_oli_col')"></input></td>
-		    <td class="centred"><input id="cb_outlicoloff" class="cb" type="checkbox" onchange="col_off_change('cb_outlicoloff','cb_randoutlicol','outline_col','outl')"></input></td>
+		    <td class="centred"><input id="rnd_outline_col" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="outline_col_off" class="cb" type="checkbox"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>line</label></td>
 		    <td class="centred"><input id="line_colour" type="color"></input></td>
-		    <td class="centred"><input id="cb_randlinecol" class="cb" type="checkbox" onchange="col_sel_change('cb_randlinecol','line_colour','rnd_lin_col')"></input></td>
-		    <td class="centred"><input id="cb_linecoloff" class="cb" type="checkbox" onchange="col_off_change('cb_linecoloff','cb_randlinecol','line_colour','line')"></input></td>
+		    <td class="centred"><input id="rnd_line_colour" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="line_colour_off" class="cb" type="checkbox"></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace fill</label></td>
 		    <td class="centred"><input id="trc_fil_col" type="color"></input></td>
-		    <td class="centred"><input id="cb_randtracecol" class="cb" type="checkbox" onchange="col_sel_change('cb_randtracecol','trc_fil_col','rnd_trc_fil')"></input></td>
-		    <td class="centred"><input id="cb_tracecoloff" class="cb" type="checkbox" onchange="col_off_change('cb_tracecoloff','cb_randtracecol','trc_fil_col','tfil')" disabled></input></td>
+		    <td class="centred"><input id="rnd_trc_fil_col" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="trc_fil_col_off" class="cb" type="checkbox" disabled></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace outl.</label></td>
 		    <td class="centred"><input id="trc_oli_col" type="color"></input></td>
-		    <td class="centred"><input id="cb_randtraceoutl" class="cb" type="checkbox" onchange="col_sel_change('cb_randtraceoutl','trc_oli_col','rnd_trc_oli')"></input></td>
-		    <td class="centred"><input id="cb_traceoutloff" class="cb" type="checkbox" onchange="col_off_change('cb_traceoutloff','cb_randtraceoutl','trc_oli_col','toli')" disabled></input></td>
+		    <td class="centred"><input id="rnd_trc_oli_col" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="trc_oli_col_off" class="cb" type="checkbox" disabled></input></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace line</label></td>
 		    <td class="centred"><input id="trc_lin_col" type="color"></input></td>
-		    <td class="centred"><input id="cb_randtraceline" class="cb" type="checkbox" onchange="col_sel_change('cb_randtraceline','trc_lin_col','rnd_trc_lin')"></input></td>
-		    <td class="centred"><input id="cb_tracefilloff" class="cb" type="checkbox" onchange="col_off_change('cb_tracefilloff','cb_randtraceline','trc_lin_col','tlin')" disabled></input></td>
+		    <td class="centred"><input id="rnd_trc_lin_col" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="trc_lin_col_off" class="cb" type="checkbox" disabled></input></td>
 		  </tr>
 		</table>
 	      </td>
 	    </tr>
 	    <tr>
-	      <td><label>Tracing: <input id="cb_tracing" class="cb" type="checkbox" checked></input></label></td>
-	      <td><input type="button" class="button1" id="btn_reset" onClick="reset_values();" value="Reset Values" disabled></td>
+	      <td><label>Tracing:</label></td>
+	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></input></td>
+	      <!-- <td><input type="button" class="button1" id="btn_reset" onClick="reset_values();" value="Reset Values" disabled></td> -->
 	    </tr>
 	    <tr>
 	      <td><label>Output file:</label></td>
@@ -339,8 +340,7 @@
 	    nu_alpha:     90,
 	}
 	function update_alpha(alpha_value) {
-	    inp_vals["nu_alpha"] = Math.abs(Number(alpha_value)) / 100;
-	    update_global_alpha(inp_vals.nu_alpha);
+	    update_global_alpha(Math.abs(Number(alpha_value)) / 100);
 	}
 	const inp_vals_map = {};
 	for (let a_val in inp_vals) {
@@ -352,7 +352,7 @@
 	inp_vals_map.wd_line.addEventListener("change",function() {resize_linewidth(Number(this.value));});
 	inp_vals_map.nu_scatter.addEventListener("change",function(){update_scatter(this.value)});
 	inp_vals_map.nu_alpha.addEventListener("change",function(){update_alpha(this.value)});
-	
+
 	const tracer = document.getElementById("cb_tracing");
 	tracer.addEventListener("change",function() { check_tracer(); });
 
@@ -365,8 +365,15 @@
 	const btn_clear = document.getElementById("btn_clear");
 	const btn_rm_lone = document.getElementById("btn_rm_lone");
 	const col_sels = {};
-	for (let a_key in colours)
+	const rnd_boxes = {};
+	const off_boxes = {};
+	for (let a_key in colours) {
 	    col_sels[a_key] = document.getElementById(a_key);
+	    rnd_boxes[a_key] = document.getElementById("rnd_" + a_key);
+	    rnd_boxes[a_key].addEventListener("change",function(){col_sel_change(a_key);});
+	    off_boxes[a_key] = document.getElementById(a_key + "_off");
+	    off_boxes[a_key].addEventListener("change",function(){col_off_change(a_key);});
+	}
 
 	const map_node_params = {};
 	for (let it in node_params) {
@@ -430,8 +437,12 @@
 	function save_settings(fn_id) {
 	    const fn = document.getElementById(fn_id).value;
 	    let hiddenElement = document.createElement('a');
+	    const out_val = {};
+	    out_val.inp_vals = inp_vals;
+	    out_val.colours = colours;
+	    out_val.node_params = node_params;
 	    
-	    hiddenElement.href = 'data:attachment/text,' + encodeURIComponent(JSON.stringify(colours));
+	    hiddenElement.href = 'data:attachment/text,' + encodeURIComponent(JSON.stringify(out_val));
 	    hiddenElement.target = '_blank';
 	    hiddenElement.download = fn;
 	    hiddenElement.click();
