disable non-working file input box

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -263,7 +263,7 @@
 	      <td><input type="button" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td>
 	    </tr>
 	    <tr>
-	      <td colspan="2"><input type="file" id="infilename" /></td>
+	      <td colspan="2"><input type="file" id="infilename" disabled></td>
 	    </tr>
 	    <tr>
 	      
