two simple graph building algorithms: circular and central

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -53,6 +53,8 @@
 		  set_scenario(0);
 		  break;
 	      case 2:
+	      case 5:
+	      case 6:
 		  set_scenario(2);
 		  break;
 	      case 3:
@@ -315,6 +317,8 @@
 		  <option value="2">All:All</option>
 		  <option value="3">Tree</option>
 		  <option value="4">from Edge List</option>
+		  <option value="5">Circular</option>
+		  <option value="6">Central</option>
 	      </select></td>
 	    </tr>
 	    <tr>
