linear graph, as simple alg.

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -55,6 +55,7 @@
 	      case 2:
 	      case 5:
 	      case 6:
+	      case 7:
 		  set_scenario(2);
 		  break;
 	      case 3:
@@ -319,6 +320,7 @@
 		  <option value="4">from Edge List</option>
 		  <option value="5">Circular</option>
 		  <option value="6">Central</option>
+		  <option value="7">Linear</option>
 	      </select></td>
 	    </tr>
 	    <tr>
