added: ladder and matrix graphs

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -56,6 +56,8 @@
 	      case 5:
 	      case 6:
 	      case 7:
+	      case 8:
+	      case 9:
 		  set_scenario(2);
 		  break;
 	      case 3:
@@ -321,6 +323,8 @@
 		  <option value="5">Circular</option>
 		  <option value="6">Central</option>
 		  <option value="7">Linear</option>
+		  <option value="8">Ladder</option>
+		  <option value="9">Matrix</option>
 	      </select></td>
 	    </tr>
 	    <tr>
