triangulated has been added

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -58,6 +58,7 @@
 	      case 7:
 	      case 8:
 	      case 9:
+	      case 10:
 		  set_scenario(2);
 		  break;
 	      case 3:
@@ -325,6 +326,7 @@
 		  <option value="7">Linear</option>
 		  <option value="8">Ladder</option>
 		  <option value="9">Matrix</option>
+		  <option value="10">Triangulated</option>
 	      </select></td>
 	    </tr>
 	    <tr>
